chore: update environment configuration
BM-54

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "MonstervilleSecrets": {
+    "BloomingMystery": {
       "commandName": "Executable",
       "executablePath": "playcheck",
       "commandLineArgs": "runner --imagePath \"$(ImageDirectory)\" --languagePath \"$(LanguageDirectory)\" --templatePath \"$(TemplateDirectory)\""
