chore: update config

--- a/BloomingMystery.csproj
+++ b/BloomingMystery.csproj
@@ -19,6 +19,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="images\100793\MonstervilleSecrets\" />
+    <Folder Include="images\100793\BloomingMystery\" />
   </ItemGroup>
 </Project>
