--- a/BloomingMystery.csproj
+++ b/BloomingMystery.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>MonstervilleSecrets</AssemblyName>
-    <RootNamespace>MonstervilleSecrets</RootNamespace>
+    <AssemblyName>BloomingMystery</AssemblyName>
+    <RootNamespace>BloomingMystery</RootNamespace>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <PropertyGroup>
